# xrpl-hooks-compiler

./: .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml
.github/workflows/: main.yml  test.yml
c2wasm-api/: .gitignore  Makefile  README.md  copyheaders.sh  package-lock.json  package.json  tsconfig.json
c2wasm-api/assemblyscript/: xrpl-hooks-api.ts
c2wasm-api/assemblyscriptsrc/: error.ts  extern.ts  hookapi_head.ts  macro.ts  sfcodes.ts
c2wasm-api/src/: index.ts
c2wasm-cli/: .env  .env.sample  .gitignore  README.md  jest.config.unit.js  package.json  tsconfig.json
c2wasm-cli/contracts/: base.c  hookapi.h  macro.h
c2wasm-cli/src/: build.ts  decodeBinary.ts  index.ts  (+3 more)
clang-build/: Dockerfile  Makefile  build.sh  check-subset.py  copy-subset.py  rules.json
clangd-build/: Dockerfile  Makefile  build.sh  munge-doc.py
cleaner-build/: Dockerfile  Makefile  build.sh
docker/: .clang-tidy  .clangd  Dockerfile  Makefile  build.sh  compile_flags.txt  docker-compose.yml  guard_checker  run.sh
docker-build/: Dockerfile  Makefile  run.sh
load-test/: check.py  drive.py
xrpld-ai/: .env  .gitignore  README.md  package.json  tsconfig.json
xrpld-cli/: .gitignore  CONTRIBUTING.md  README.md  build.js  jest.config.integration.js  package.json  tsconfig.json  xrpld-cluster-compose.yml  xrpld-standalone-compose.yml
xrpld-publisher/: .flake8  .gitignore  README.md  pyproject.toml  test.py  testing_config.py  vl.json
xrpld-publisher/tests/unit/: test_publisher.py
xrpld-publisher/xrpld_publisher/: models.py  publisher.py  utils.py  validator.py
(+45 files in other folders)
